--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
-django-bootstrap3==11.0.0
+autopep8==1.4.4
 config==0.3.9
+confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
+Django==1.11
+django-bootstrap-form==3.4
+django-bootstrap3==11.0.0
 django-bootstrap4==0.0.8
+django-columns==0.1.0
+django-friendship==1.8.0
+django-heroku==0.3.1
+django-registration==2.4.1
+django-tinymce==2.8.0
 gunicorn==19.9.0
 Pillow==6.0.0
+psycopg2==2.7.5
+pycodestyle==2.5.0
 python-decouple==3.1
 pytz==2019.1
 whitenoise==4.1.2
-django-heroku==0.3.1
-psycopg2==2.7.5
-Django==1.11
