deployment to heroku

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY='r&)nv#c3v)^9)87dq7z!9yy=nk761#vm^^y$wmmvtux5@do)!%'
-DEBUG=True 
+DEBUG=False 
 DB_NAME='instagram'
 DB_USER='adho'
 DB_PASSWORD='chukula'
