--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_NAME='instagram'
 DB_USER='adho'
 DB_PASSWORD='chukula'
 DB_HOST='127.0.0.1'
-MODE='dev' 
+MODE='prod' 
 ALLOWED_HOSTS='*'
 DISABLE_COLLECTSTATIC=1
